@@ -18,14 +18,13 @@
     </description>
 
 	<properties>
-		<jdk.version>1.7</jdk.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<!-- 
-		14.5 is the last supported version for java 7
+		<java.version>11</java.version>
+		<!--
 		See following page for the required java version
 		http://docs.geotools.org/latest/userguide/build/install/jdk.html#
 		 -->
-		<geotools.version>14.5</geotools.version>
+		<geotools.version>21.2</geotools.version>
 		<log4j.version>2.8.2</log4j.version>
 		<jackson.version>2.9.9</jackson.version>
 		<jackson.databind.version>2.9.9.1</jackson.databind.version>
@@ -186,18 +185,11 @@
 			<version>2.1</version>
 		</dependency>
 
-		<!-- jackson JTS -->
-		<dependency>
-			<groupId>com.bedatadriven</groupId>
-			<artifactId>jackson-datatype-jts</artifactId>
-			<version>2.4</version>
-		</dependency>
-
 		<!-- junit -->
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.11</version>
+			<version>4.12</version>
 			<scope>test</scope>
 		</dependency>
 
@@ -212,10 +204,10 @@
 		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-core</artifactId>
-			<version>2.11.0</version>
+			<version>2.28.2</version>
 			<scope>test</scope>
 		</dependency>
-	
+
 		<!-- JSONAssert -->
 		<dependency>
 		    <groupId>org.skyscreamer</groupId>
@@ -224,11 +216,28 @@
 		    <scope>test</scope>
 		</dependency>
 
-    <!-- Driver SQLite -->
+    	<!-- Driver SQLite -->
 		<dependency>
 			<groupId>org.xerial</groupId>
 			<artifactId>sqlite-jdbc</artifactId>
 			<version>3.8.10.1</version>
+		</dependency>
+
+		<!-- JDK 8 libraries -->
+		<dependency>
+			<groupId>javax.annotation</groupId>
+			<artifactId>javax.annotation-api</artifactId>
+			<version>1.3.2</version>
+		</dependency>
+		<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+			<version>2.4.0-b180725.0427</version>
+		</dependency>
+		<dependency>
+			<groupId>org.glassfish.jaxb</groupId>
+			<artifactId>jaxb-runtime</artifactId>
+			<version>2.4.0-b180725.0644</version>
 		</dependency>
 	</dependencies>
 
@@ -255,9 +264,10 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
+					<version>3.8.0</version>
 					<configuration>
-						<source>${jdk.version}</source>
-						<target>${jdk.version}</target>
+						<source>${java.version}</source>
+						<target>${java.version}</target>
 					</configuration>
 				</plugin>
 
@@ -278,6 +288,9 @@
         <version>2.22.1</version>
         <configuration>
             <useSystemClassLoader>false</useSystemClassLoader>
+			<argLine>
+				--illegal-access=permit
+			</argLine>
         </configuration>
       </plugin>
     </plugins>
